# engine

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeListsVulkan.txt  CMakeSettings.json  Dockerfile  LICENSE  LICENSEVulkan.txt  README.md  compile_commands.json  demo_filesystemzip.cpp  graphics_main.cpp  linux-windows-build.sh  main.cpp  miniz.pc  todo
.github/workflows/: archlinux.yml  cmake.yml  ubuntu.yml
audio/: AudioListener.cpp  AudioListener.hpp  AudioManager.cpp  AudioManager.hpp  AudioSource.cpp  AudioSource.hpp  CMakeLists.txt  WAV.hpp  WAVHeader.hpp
debug/: CMakeLists.txt  Debug.cpp  Debug.hpp  Makefile  cmake_install.cmake
doc/: BUILD_STATIC_EXAMPLE.drawio
filesystem/: CMakeLists.txt  FileInfo.cpp  FileInfo.hpp  FileInterface.hpp  FileNative.cpp  FileNative.hpp  FileZip.cpp  FileZip.hpp  FilesystemInterface.hpp  FilesystemNative.cpp  FilesystemNative.hpp  FilesystemVirtual.hpp  FilesystemZip.cpp  FilesystemZip.hpp  LineArgumentParser.cpp  LineArgumentParser.hpp
game/: CMakeLists.txt  main.cpp
graphics/: BMPLoader.cpp  BMPLoader.hpp  CMakeLists.txt  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Debug.hpp  Graphics.cpp  Graphics.hpp  Mesh.cpp  Mesh.hpp  PrototypeObject.h  Renderer2D.cpp  Renderer2D.hpp  Scene.cpp  Scene.h  SceneManager.h  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VBO.cpp  VBO.hpp  Window.cpp  Window.hpp
graphics/opengl/: CMakeLists.txt  Shader.cpp  Shader.hpp  shader.cpp  shader.hpp
input/: CMakeLists.txt  Gamepad.cpp  Gamepad.hpp  Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
memory/: CMakeLists.txt  Memory.cpp  Memory.hpp  heap.cpp  heap.hpp
source/: CMakeLists.txt
source/audio/: AudioListener.cpp  AudioSource.cpp
source/filesystem/: FileInfo.cpp  FileInfo.hpp  FileInterface.hpp  FileNative.hpp  FileZip.hpp  FilesystemNative.hpp  FilesystemVirtual.cpp  FilesystemVirtual.hpp  FilesystemZip.hpp  LineArgumentParser.cpp  LineArgumentParser.hpp
source/game/: CMakeLists.txt
source/graphics/: CMakeLists.txt  Camera3D.hpp  Debug.cpp  Mesh.cpp  PrototypeObject.cpp  Renderer2D.cpp  SceneManager.cpp  Shader.hpp  WavefrontObjectLoader.cpp  WavefrontObjectLoader.hpp
source/graphics/Direct3D11/: Basic.cso  BasicPixel.cso  BasicVertex.cso  Device.cpp  Device.h  PixelShader.cpp  PixelShader.h  RenderTarget.cpp  RenderTarget.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VertexLayout.cpp  VertexLayout.h  VertexShader.cpp  VertexShader.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h  dawn.cpp
source/graphics/Vulkan/: VulkanContext.cpp  VulkanContext.hpp
source/window/: Window.cpp
source/window/input/: Keyboard.hpp  Mouse.hpp
window/: CMakeLists.txt  Window.cpp  Window.hpp
window/input/: CMakeLists.txt  Gamepad.hpp  Keyboard.cpp  Mouse.cpp
